--- a/index.html
+++ b/index.html
@@ -5,19 +5,20 @@
     <script src="https://polygit.org/components/webcomponentsjs/webcomponents-loader.js"></script>
     <link rel="import" href="https://polygit.org/components/polymer/polymer-element.html">
     <link rel="import" href="https://polygit.org/components/polymer/lib/elements/dom-repeat.html">
-    <script src="components/table.js" type="text/javascript"></script>
-    <script src="js/users.js" type="text/javascript"></script>
-    <script src="js/index.js" type="text/javascript"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://getbootstrap.com/docs/3.3/dist/css/bootstrap.min.css" crossorigin="anonymous">
-    <script src="js\jquery-3.3.1.min.js" type="text/javascript"></script>
-    <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <link href="css/main.css" rel="stylesheet" type="text/css">
+    <script src="components/table.js" type="text/javascript"></script>
+    <script src="js/users.js" type="text/javascript"></script>
+    <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
+    <script src="js\jquery-3.3.1.min.js" type="text/javascript"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js" type="text/javascript"></script>
+    <script src="js/index.js" type="text/javascript"></script>
+    <script src="js/table.js" type="text/javascript"></script>
   </head>
   <body>
       <header>
-        <!-- Fixed navbar -->
         <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
           <a class="navbar-brand" href="#">Usuarios</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,33 +31,12 @@
         <div class="row">
           <div class="col-md-10 col-lg-10 col-xs-10 no-padding text-center">&nbsp;</div>
           <div class="col-md-2 col-lg-2 col-xs-2 no-padding text-right">
-            <button class="btn btn-info" data-toggle="modal" data-target="#exampleModal">Nuevo usuario</button>
+            <button class="btn btn-info" onclick="javascript:addUser()">Nuevo usuario</button>
           </div>
           <div class="col-md-12 col-lg-12 col-xs-12 no-padding text-center">
-            <users-table id="user-table" class="table-responsive"></users-table>
+            <items-table id="user-table" class="table-responsive"></items-table>
           </div>
         </div>
       </div>
-      <!-- Modal -->
-      <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              ...
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!--end modal-->
   </body>
 </html>
